# nyqst-agent-orchestrator

./: .env.example  .env.prod  .env.staging  .gitignore  ADVANCED_DESIGN_QUESTIONS.md  ARCHITECTURAL_CONSISTENCY_ANALYSIS.md  CITATION_DEBUGGING_REPORT.md  CLAUDE.md  CROSS_MAPPING_ANALYSIS.md  DESIGN-KNOWLEDGE-CONTEXT-SYSTEM.md  README.md  RISK_REGISTER.md  USER-SCENARIOS-INDEX.md  V4_OVERRIDE_TARGETS.md  agent-orchestrator.yaml  alembic.ini  ao-agent-rules.md  build_v4_manifest.py  docker-compose.yml  eslint.config.js  fix_pr_feedback.sh  index.html  package.json  pyproject.toml  sync-conductor.sh  tailwind.config.js  tsconfig.json  vite.config.ts
.codex/: README.md  ao-worker-rules.md  config.toml  managed_config.toml  requirements.toml
.github/: pull_request_template.md
backstage/: app-config.production.yaml  catalog-info.yaml
conductor/: product-guidelines.md  product.md  task_issue_map.json  tech-stack.md  tracks.md  workflow.md
docs/: BRANCH_PROTECTION_MANUAL_SETUP.md  BUSINESS-SURFACE-CONTRACT-V1.md  EVENT-CONTRACT-V1.md  INDEX_CONTRACT.md  NDM-SCHEMA-V1.md  OBSERVABILITY.md  PLATFORM_REFERENCE_DESIGN.md  REFACTORING_OPPORTUNITIES.md  RESEARCH_SYNTHESIS.md  STARTUP_SEQUENCE.md  START_HERE.md  UI_ARCHITECTURE.md
migrations/: env.py
requirements/: CRITICAL-ANALYSIS.md  RESEARCH-SYNTHESIS.md  UNIVERSAL-ABSTRACTIONS.md  WHAT-TO-BUILD-FIRST.md  research-consolidation-gates.md
schemas/: README.md  claim.schema.json  document.schema.json  event.schema.json
scripts/: smoke-test.sh
src/: App.tsx  index.ts
staging_issues/: BL-001__bl-001-research-orchestrator-graph.md  BL-004.md  BL-004a.md  BL-004b.md  BL-005.md  BL-007.md  BL-009.md  BL-009__bl-009-reportrenderer-component.md  BL-013__bl-013-quota-enforcement-middleware.md  BL-016__bl-016-entity-citation-substrate.md  BL-019.md  BL-021__bl-021-clarification-flow.md  EPIC-P0.md  OBS-002.md  P0-002.md  SANITIZATION_MANIFEST.json  SANITIZATION_MANIFEST.md  STORY-PROD-004.md  STORY-STUDIO-001.md  STORY-STUDIO-002.md  STORY-STUDIO-004.md  STUDIO-001.md  STUDIO-002.md  STUDIO-003.md  STUDIO-004.md  STUDIO-005.md  TASK-STUDIO-003.md  V4_NEW_ISSUES.md  v4_final_import.json
tests/: __init__.py  conftest.py  factories.py
tools/: ao_doctor_local.sh  bootstrap_ao_codex.sh  bootstrap_worktree.sh  check_pipeline_config.sh  run_repo_checks.sh  sync_codex_team_config.sh
ui/: .gitignore  (+8 more)
(+466 files in other folders)
