[project]
name = "intelli"
version = "0.1.0"
description = "Agent-First Document Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Intelli Team" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",

    # Configuration
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.0.0",

    # Storage
    "aioboto3>=13.0.0",
    "aiofiles>=24.1.0",

    # Document processing
    "docling>=2.10.0",

    # Agent framework
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",

    # MCP server
    "mcp>=1.2.0",

    # Utilities
    "httpx>=0.28.0",
    "orjson>=3.10.0",
    "python-dateutil>=2.9.0",
    "structlog>=24.4.0",

    # Security
    "pyjwt>=2.9.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",

    # Caching and background jobs
    "redis>=5.0.0",
    "arq>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
observability = [
    "langfuse>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # Line too long
    "B008",   # Function call in default argument (FastAPI Depends pattern)
    "B904",   # raise-without-from-inside-except (style preference)
    "SIM105", # contextlib.suppress suggestion (style preference)
    "SIM108", # ternary operator suggestion (style preference)
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aioboto3.*", "docling.*", "langgraph.*", "mcp.*"]
ignore_missing_imports = true
